<resources>
    <string name="app_name">Minesweeper</string>
    <string name="gamefield_size">Gamefield size</string>
    <string name="start_game">Start game</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="mines">Mines number, %</string>
    <string name="textview">TextView</string>
    <string name="minespr">minesPr</string>
    <string name="gameOver">You loose!</string>
    <string name="success">You win!</string>
    <string name="save_record">Save Record</string>
    <string name="settings">Settings</string>
    <string name="ok_bth_title">OK</string>
    <string name="title_dialog">HighScore record</string>
    <string name="message_dialog">Enter your name</string>
    <string name="cancel">Cancel</string>
    <string name="high_score">High Score</string>
    <string name="name">Name</string>
    <string name="field_size">Field Size</string>
    <string name="time">Time</string>
    <string name="score">Score</string>
    <string name="mines2">Mines</string>
</resources>